# ogre-assimp

./: .hgignore  AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  LICENSE  Readme.md
CMakeModules/: FindASSIMP.cmake
include/: AssimpLoader.h
src/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  Importer.cpp  Importer.h  main.cpp
test/: CMakeLists.txt
tool/: CMakeLists.txt  main.cpp
